[project]
name = "drl-assignment-1"
version = "0.1.0"
description = ""
authors = [
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "gym (>=0.26.2,<0.27.0)",
    "ipython (>=9.0.2,<10.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
